# oh-my-openagent-swtich

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  eslint.config.js  package.json  playwright.config.ts  prettier.config.js  tsconfig.json  vite.config.ts  项目说明.md
.github/workflows/: ci.yml  release.yml
.omo/plans/: oh-my-openagent-switch.md
e2e/: .gitignore  active-status.spec.ts  apply-config.spec.ts  backup-restore.spec.ts  create-config.spec.ts  from-opencode.spec.ts  import-export.spec.ts
e2e/fixtures/: config-export.json  opencode-corrupt.jsonc  opencode-with-headers.jsonc  opencode.jsonc
e2e/helpers/: skip.ts  tauri.ts  test-env.ts
scripts/: build-linux.sh  build-mac.sh  build-win.sh
src/: App.tsx  index.css  index.html  main.tsx  router.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: fingerprint.rs  jsonc.rs  merge.rs  mod.rs
src-tauri/src/storage/: active.rs  atomic.rs  backup.rs  configs.rs  detect.rs  export.rs  import.rs  init.rs  mod.rs  paths.rs
src-tauri/tests/: integration_test.rs
src/components/: ApplyButton.tsx  ApplyResultDialog.tsx  ConfirmDialog.tsx  ImportExportMenu.tsx  ImportFromOpencodeButton.tsx  Layout.tsx  ModelRow.tsx  RestartPrompt.tsx  RoleSelect.tsx  Toast.tsx
src/lib/: constants.ts  process-check.ts  restart-cmd.ts  tauri.ts
src/pages/: BackupsPage.tsx  EditPage.tsx  ListPage.tsx
src/store/: configs.ts  toast.ts
src/types/: index.ts
