[package]
name = "oh-my-openagent-switch"
version = "0.1.0"
description = "跨平台桌面工具，一键切换 oh-my-openagent + opencode 的供应商配置"
authors = ["zaxcler"]
edition = "2021"

[lib]
name = "oh_my_openagent_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tempfile = "3"
jsonc-parser = { version = "0.26", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
